# biokg_lora

./: .dockerignore  .gitignore  DOCKER_TRAINING.md  Dockerfile  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  INSTALL_MACOS.md  KG_AND_ROTATE_TRAINING.md  PROJECT_README.md  README.md  README_CORRECTION.md  ROTATE_DIAGRAM_SUMMARY.md  STANDALONE_CLARIFICATION.md  docker-compose.yml  pyproject.toml  train_docker.sh
biokg_lora/: __init__.py
biokg_lora/data/: __init__.py  dataset.py  kg_builder.py
biokg_lora/evaluation/: __init__.py
biokg_lora/models/: __init__.py  biokg_lora.py  entity_linker.py  projection.py  rotate.py
biokg_lora/training/: __init__.py
biokg_lora/visualization/: __init__.py  kg_viz.py
docs/: DATA_SOURCES.md  INSTALL.md  QUICKSTART.md
scripts/: demo.py  generate_qa_dataset.py  quickstart.py  stage0_build_kg.py  stage1_train_rotate.py  stage2_train_projection.py  test_embedding_augmentation.py  train_lora.py
tests/: test_end_to_end.py
